Fixed print stylesheet + some text adjustments

--- a/templates/_profile.html.twig
+++ b/templates/_profile.html.twig
@@ -3,12 +3,8 @@
 </div>
 <div class="small-12 large-8 columns">
     <p>
-        As with a lot of Developers my passion for development started out as a hobby, since early hight school I started
-        to enjoy writing small pieces of software just for the fun of it. It started out with BASIC, but soon after I
-        started with PHP.
-    </p>
-    <p>
-        It took me quit a few years to learn that just hacking away doesn't bring you much, not more then a pleasure doing it.
+        As with a lot of Developers my passion for development started out as a hobby. As an effect it took me quit a few
+        years to learn that just hacking away doesn't bring you much, not more then a having fun while doing it.
         It wasn't until I started the study Computer Science, where we learned some JAVA, that I started to see the importance
         of structure.
     </p>
