--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,8 +6,9 @@
     <meta name="desciption" content="Curriculum Vitae of Willem-Jan Zijderveld, PHP Developer and OSS addict">
     <meta charset="UTF-8" />
     <link href='http://fonts.googleapis.com/css?family=Exo+2:400,700,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/assets/css/vendor.css" />
-    <link rel="stylesheet" href="/assets/css/screen.css" />
+    <link rel="stylesheet" media="all" href="/assets/css/vendor.css" />
+    <link rel="stylesheet" media="all" href="/assets/css/screen.css" />
+    <link rel="stylesheet" media="print" href="/assets/css/print.css" />
     <script type="text/javascript" src="/vendor/modernizr/modernizr.js"></script>
 
     <title>Willem-Jan Zijderveld - Curriculum Vitae</title>
@@ -18,17 +19,17 @@
 
 <header>
     <div class="row">
-        <div class="small-12 medium-8 columns">
+        <div class="small-12 large-8 columns">
             <h1 class="hide-for-small">Willem-Jan Zijderveld</h1>
             <h2 class="show-for-small-only">Willem-Jan Zijderveld</h2>
             <h4>Senior PHP Developer <span class="sub">with an OpenSource addiction</span></h4>
         </div>
-        <div class="small-12 medium-4 columns">
+        <div class="small-12 large-4 columns">
             <ul class="contact">
-                <li><a class="icon email" href="mailto:wjzijderveld@gmail.com">wjzijderveld@gmail.com</a></li>
-                <li><a class="icon github" href="https://github.com/wjzijderveld">github.com/wjzijderveld</a></li>
-                <li><a class="icon blog" href="http://blog.willem-jan.net">blog.willem-jan.net</a></li>
-                <li><a class="icon twitter" href="https://twitter.com/willemjanz">@willemjanz</a></li>
+                <li>Email: <a class="icon email" href="mailto:wjzijderveld@gmail.com">wjzijderveld@gmail.com</a></li>
+                <li>Github: <a class="icon github" href="https://github.com/wjzijderveld">github.com/wjzijderveld</a></li>
+                <li>Blog: <a class="icon blog" href="http://blog.willem-jan.net">blog.willem-jan.net</a></li>
+                <li>Twitter: <a class="icon twitter" href="https://twitter.com/willemjanz">@willemjanz</a></li>
             </ul>
         </div>
     </div>
