--- a/web/assets/scss/screen.scss
+++ b/web/assets/scss/screen.scss
@@ -109,12 +109,30 @@ header {
     }
 }
 
-.job .date, .skill .level {
+.job .date, .skill .level, .education .info {
     font-weight: 300;
     display: inline-block;
-    padding: 2px;
+    padding: 4px 6px;
+    margin: 0 4px;
     background: #378fc2;
     color: #FFF;
     font-size: rem-calc(12);
+    letter-spacing: 2px;
     @include border-radius(4px, 4px);
+}
+
+.education {
+//    border-bottom: 1px solid #CCC;
+//    padding-top: 1rem;
+//    padding-bottom: 1rem;
+    .columns.img {
+        padding-right: 0;
+    }
+    img {
+        height: 40px;
+    }
+    .info {
+        background: #ffb243;
+        color: #000;
+    }
 }
