--- a/templates/_profile.html.twig
+++ b/templates/_profile.html.twig
@@ -11,8 +11,8 @@
     <p>
         In 2011 I contributed my first PR on GitHub and ever since I grew more into OpenSource. The feeling that you can give
         something back to the community is awesome! That community helped me grow as a developer. In a relative short period
-        I learned a lot about design patterns, TDD, Continues Integration, etc. But also about receiving and giving code reviews.
-        Working with the community is, in my opinion, the best way to grow as a developer.
+        I learned a lot about SOLID, Design Patterns, TDD, Continues Integration, etc. But also about receiving and giving
+        code reviews. Working with the community is, in my opinion, the best way to grow as a developer.
     </p>
     <p>
         Since 2011 I started attending more conferences and meetups, there I learned that I wanted to do more then building
